# mdstab

./: .cookiecutter.json  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/mdstab/: __init__.py  __main__.py  cli.py
src/mdstab/commands/: __init__.py  cmd_prepamber.py  cmd_rmsd.py  cmd_rmsf.py  cmd_setup.py
src/mdstab/parsers/: __init__.py
src/mdstab/parsers/configuration/: __init__.py  configparser.py
src/mdstab/templates/amber/equil/: md11.jinja2  md12.jinja2  md13.jinja2  md14.jinja2  md16.jinja2  min11.jinja2  min12.jinja2  min13.jinja2  min14.jinja2  min15.jinja2
src/mdstab/templates/amber/prod/: initial.jinja2
src/mdstab/templates/amber/scripts/: equilibrate.jinja2  production.jinja2
tests/: __init__.py  datafile.py  test_main.py
tests/commands/: __init__.py  test_prepamber.py  test_rmsd.py  test_rmsf.py  test_setup.py
tests/data/: __init__.py
tests/parsers/: __init__.py
tests/parsers/configuration/: __init__.py  test_configparser.py
